2009-04-07  Marek Habersack  <mhabersack@novell.com>

	* ScriptComponentDescriptor.cs: new values replace old in
	AddEntry.

2009-03-19  Marek Habersack  <mhabersack@novell.com>

	* ScriptManager.cs: WriteCallbackPanel is called from
	UpdatePanel.RenderChildren and should not output anything for
	panels registered as the ones to refresh. If such a panel calls
	this method, its output is stored in a dictionary to be used later
	in RenderFormCallback.
	RenderFormCallback first renders all the form controls. In that
	process UpdatePanel instances, if any, may call
	WriteCallbackPanel. After that, if there are panels registered for
	refresh, another loop over the list is made this time checking
	whether any panels left their output in WriteCallbackPanel. If a
	panel hasn't done it it is rendered. And last, another check is
	done to see if the loop described above caused any panels to leave
	output in WriteCallbackPanel. If yes, the output is written to the
	text writer.

2009-01-26  Marek Habersack  <mhabersack@novell.com>

	* ScriptManager.cs: before registering script service reference
	check if the service type is decorated with the [ScriptService]
	custom attribute. Only such service types can be called from
	client JavaScript.

2008-10-02  Marek Habersack  <mhabersack@novell.com>

	* ScriptManager.cs: reverting revision 114552 since the real bug
	was somewhere else. The correct fix is to make sure UpdatePanels
	which output something _or_ have been named in the POST request as
	requiring a refresh are marked as such. Only in that situation
	HasBeenRendered returns true (as it should for those panels)
	Cosmetical output change - the hidden fields are output after the
	update panels contents is sent in an async request. It makes the
	async response look similar to the MS.NET's one but, more
	importantly, makes debugging easier.

2008-09-23  Marek Habersack  <mhabersack@novell.com>

	* ScriptManager.cs: CultureInfoSerializer no longer derives from